Terraform/addons/monitoring/mattermost/mattermost-ingress.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: broker
# spec:
#   externalTrafficPolicy: Local
#   ports:
#   - nodePort: 30000
#     port: 30000
#     protocol: TCP
#     targetPort: 9092
#   selector:
#     app: broker
#   type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost
  namespace: mattermost
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mattermost.k8s.local
    secretName: mattermost-certs
  rules:
  - host: mattermost.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mattermost-ingress
            port:
              number: 443
